update config - setting comment env with giscus

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,8 @@ avatar: "avatar.png"
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: "gitcus"
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -89,7 +90,8 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
+    # <gh-username>/<repo>
+    repo: momo1108/momo1108.github.io
     repo_id:
     category:
     category_id:
