--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ toc: true
 
 comments:
   # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  active: "giscus"
+  active: 'giscus'
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -92,7 +92,7 @@ comments:
   giscus:
     # <gh-username>/<repo>
     repo: momo1108/momo1108.github.io
-    repo_id:
+    repo_id: 716438973
     category:
     category_id:
     mapping: # optional, default to 'pathname'
