--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ toc: true
 
 comments:
   # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  active:
+  active: giscus
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -93,8 +93,8 @@ comments:
     # <gh-username>/<repo>
     repo: momo1108/momo1108.github.io
     repo_id: R_kgDOKrP9vQ
-    category: Announcements
-    category_id: DIC_kwDOKrP9vc4Ca0Zx
+    category: General
+    category_id: DIC_kwDOKrP9vc4Ca0Zy
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
