update config -update webrick

--- a/_config.yml
+++ b/_config.yml
@@ -197,4 +197,4 @@ jekyll-archives:
 
 webrick:
   headers:
-    Content-Security-Policy: default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; 
+    Content-Security-Policy: frame-ancestors 'self'; 
