--- a/_config.yml
+++ b/_config.yml
@@ -197,4 +197,4 @@ jekyll-archives:
 
 webrick:
   headers:
-    Content-Security-Policy: frame-ancestors https://giscus.app;
+    Content-Security-Policy: frame-ancestors 'self' https://giscus.app;
