--- a/_config.yml
+++ b/_config.yml
@@ -79,12 +79,25 @@ avatar: "avatar.png"
 toc: true
 
 comments:
-  active: 'giscus'
+  # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: utterances
+  # The active options are as follows:
+  disqus:
+    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  # utterances settings › https://utteranc.es/
+  utterances:
+    repo: momo1108/momo1108.github.io
+    issue_term: pathname
+  # Giscus options › https://giscus.app
   giscus:
     repo: momo1108/momo1108.github.io
     repo_id: R_kgDOKrP9vQ
     category: General
     category_id: DIC_kwDOKrP9vc4Ca0Zy
+    mapping: pathname
+    input_position: bottom
+    lang: ko-KR
+    reactions_enabled: 1
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -180,3 +193,7 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+webrick:
+  headers:
+    Content-Security-Policy: frame-ancestors https://giscus.app; 
