update post - github project code analysis
new post
- .NET application settings

update snippet
- update prefix
- new snippet : open link in new tab

update settings
- disable quickSuggestions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "[markdown]": {
         "editor.quickSuggestions": {
-          "other": true,
+          "other": false,
           "comments": false,
-          "strings": true
+          "strings": false,
         },
         "editor.suggest.showWords": false,
-        "editor.suggest.showSnippets": true
+        "editor.suggest.showSnippets": true,
     }
 }
